--- a/src/components/personalAccount/servicesInfo/ServicesInfo.scss
+++ b/src/components/personalAccount/servicesInfo/ServicesInfo.scss
@@ -6,6 +6,13 @@
     font-size: 16px;
     font-weight: 700;
   }
+  &__subtitle {
+    opacity: 0.5;
+  }
+  &__input,
+  &__select {
+    width: 100%;
+  }
   &__footer {
     display: flex;
     flex-direction: row;
@@ -25,15 +32,6 @@
     opacity: 0.25;
     height: 1px;
     border: none;
-  }
-
-  &__select {
-    width: 100%;
-    background: none;
-    border: 2px solid rgba(48, 102, 190, 0.5);
-    border-radius: 8px;
-    padding: 8px;
-    transition: all 0.2s ease-in-out;
   }
 
   &__reception {
@@ -62,11 +60,6 @@
         }
       }
     }
-  }
-  &__radio {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
   }
 
   .active {
