--- a/src/components/personalAccount/specialistInfo/SpecialistInfo.scss
+++ b/src/components/personalAccount/specialistInfo/SpecialistInfo.scss
@@ -2,14 +2,22 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  &__input {
+    width: 100%;
+  }
+
   &__title {
     font-weight: 700;
+  }
+
+  &__subtitle {
+    opacity: 0.5;
   }
 
   &__cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
     gap: 16px;
     width: 100%;
     flex: 1 0 auto;
@@ -27,7 +35,7 @@
   }
 }
 
-@media (max-width:960px)  {
+@media (max-width: 960px) {
   .specialist__cards {
     grid-template-columns: repeat(1, 1fr);
   }
